[metadata]
name = pytorch-ada
description = Adaptive Discriminator Augmentation for pytorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/pytorch-ada
project_urls =
    Source Code = https://github.com/BenediktAlkin/pytorch-ada
    Bug Tracker = https://github.com/BenediktAlkin/pytorch-ada/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
